# lss_solver

./: CMakeLists.txt  README.md  gaussian_elimination.cpp  gaussian_elimination.hpp  lss.cpp  mat.cpp  mat.hpp
in/: in01.txt  in02.txt  in03.txt  in04.txt  in05.txt  in06.txt
